DLS-13060: [SDIL] Fix misalignment in the 'View the details of your return' section on the return-sent page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,8 +12,7 @@
   }
 }
 
-@media print {
-    .govuk-summary-list__row--no-actions::after {
-        display: none !important
-    }
+.govuk-summary-list__row--no-actions::after {
+    display: none !important
 }
+
